# ISP3x80-Demo-Zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  west.yml
boards/insightsip/isp3080_ux/: Kconfig.defconfig  Kconfig.isp3080_ux_an  Kconfig.isp3080_ux_tg  board.yml  isp3080_ux_an-pinctrl.dtsi  isp3080_ux_an.dts  isp3080_ux_an.yml  isp3080_ux_an_defconfig  isp3080_ux_module-pinctrl.dtsi  isp3080_ux_module.dtsi  isp3080_ux_tg.dts  isp3080_ux_tg.yml  isp3080_ux_tg_defconfig
configuration/isp3080_ux_an_nrf52833/: prj.conf  prj_release.conf
configuration/isp3080_ux_tg_nrf52833/: prj.conf  prj_release.conf
configuration/isp3580_ux_an_nrf54l15_cpuapp/: prj.conf  prj_release.conf
configuration/isp3580_ux_tg_nrf54l15_cpuapp/: prj.conf  prj_release.conf
dwt_uwb_driver/: CMakeLists.txt
dwt_uwb_driver/dw3720/: dw3720_device.c
src/: main.c
src/ble/: CMakeLists.txt  ble_adv_prov_uuid128.c  ble_dis_prov_version.c
src/dfu/: CMakeLists.txt  dfu_module.c  dfu_module.h
src/events/: CMakeLists.txt  Kconfig  battery_event.c  config_event.c  config_event.h  dfu_module_event.c  dfu_module_event.h  motion_event.c  motion_event.h  twr_event.c  twr_event.h
src/modules/: CMakeLists.txt  Kconfig  Kconfig.battery_meas  Kconfig.ble_range_service  Kconfig.leds_ctrl  Kconfig.motion  Kconfig.twr  Kconfig.watchdog  battery_meas.c  ble_range_service.c  ble_range_service.h  leds_ctrl.c  motion.c  twr.c
src/uwb_interface/: CMakeLists.txt  dw_hw.c  dw_hw.h  dw_mutex.c  dw_probe_interface.c  dw_probe_interface.h  dw_sleep.c  dw_spi.c  dw_spi.h
sysbuild/: mcuboot.conf
(+14 files in other folders)
